--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jurised Law Firm, Lucknow — Trusted advocates for banking, service, consumer, matrimonial, property, RERA, and High Court cases. Get expert legal support today.">
+    <meta name="description" content="Juriseed Law Firm, Associates and Solicitors, Lucknow — Trusted advocates for banking, service, consumer, matrimonial, property, RERA, and High Court cases. Get expert legal support today.">
     <title>Jurised Law Firm | Top Advocates in Lucknow | Legal Experts</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -878,17 +878,17 @@
                 <div class="contact-card">
                     <i class="fas fa-map-marker-alt"></i>
                     <h3>Our Office</h3>
-                    <p>123 Legal Avenue, Hazratganj<br>Lucknow, Uttar Pradesh 226001</p>
+                    <p>2/408 Vinay Khand, Gomti Nagar, Near Huseria Chauraha, <br>Lucknow, Uttar Pradesh – 226010</p>
                 </div>
                 <div class="contact-card">
                     <i class="fas fa-phone-alt"></i>
                     <h3>Call Us</h3>
-                    <p>+91 9005795027<br>+91 7007499948</p>
+                    <p>+91 9005795027<br>+91 7505047760</p>
                 </div>
                 <div class="contact-card">
                     <i class="fas fa-envelope"></i>
                     <h3>Email Us</h3>
-                    <p>info@jurisedlaw.com<br>advocateambikeshsingh@gmail.com</p>
+                    <p>adv.poojatripathi@gmail.com<br>advjharnakumar06@gmail.com</p>
                 </div>
             </div>
         </div>
