--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,13 @@
         <p><strong>Office:</strong> 2/408 Vinay Khand, Gomti Nagar, Near Huseria Chauraha, Lucknow, Uttar Pradesh &ndash; 226010</p>
         <p><strong>Phone:</strong> +91 9005795027, +91 7505047760</p>
         <p><strong>Email:</strong> <a href="mailto:adv.poojatripathi@gmail.com">adv.poojatripathi@gmail.com</a></p>
+        <!-- JotForm Link -->
+        <p><strong>Online Consultation:</strong> <a href="https://agent.jotform.com/0197c97079417c31809ff5cb68af641bc167" target="_blank">Fill our consultation form</a></p>
     </main>
+
+    <!-- JotForm AI Bot Embed -->
+    <script src="https://cdn.jotfor.ms/agent/embedjs/0197c97079417c31809ff5cb68af641bc167/embed.js?skipWelcome=1&maximizable=1"></script>
+
     <footer>
         <div class="container">
             <p>&copy; 2025 Juriseed Law Firm Associates &amp; Solicitors. All Rights Reserved.</p>
