--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Juriseed Law Firm Associates &amp; Solicitors</title>
+    <title>Contact | Juriseed Law Firm Associates & Solicitors</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,15 +27,16 @@
         <p><strong>Email:</strong> <a href="mailto:adv.poojatripathi@gmail.com">adv.poojatripathi@gmail.com</a></p>
         <!-- JotForm Link -->
         <p><strong>Online Consultation:</strong> <a href="https://agent.jotform.com/0197c97079417c31809ff5cb68af641bc167" target="_blank">Fill our consultation form</a></p>
+
+        <!-- CTA Button for JotForm -->
+        <p>
+          <a href="https://agent.jotform.com/0197c97079417c31809ff5cb68af641bc167" target="_blank" style="display:inline-block; padding:15px 30px; background:#0057b8; color:#fff; font-size:1.2em; font-weight:bold; border-radius:6px; text-decoration:none; box-shadow:0 2px 6px rgba(0,0,0,0.15); transition:background 0.2s;">
+            Consult Us Now
+          </a>
+        </p>
     </main>
 
     <!-- JotForm AI Bot Embed -->
-    <!-- CTA Button for JotForm -->
-<p>
-  <a href="https://agent.jotform.com/0197c97079417c31809ff5cb68af641bc167" target="_blank" style="display:inline-block; padding:15px 30px; background:#0057b8; color:#fff; font-size:1.2em; font-weight:bold; border-radius:6px; text-decoration:none; box-shadow:0 2px 6px rgba(0,0,0,0.15); transition:background 0.2s;">
-    Consult Us Now
-  </a>
-</p>
     <script src="https://cdn.jotfor.ms/agent/embedjs/0197c97079417c31809ff5cb68af641bc167/embed.js?skipWelcome=1&maximizable=1"></script>
 
     <footer>
